--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -7248,3 +7248,39 @@
     model: LAVIE Tab E 10FHD2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; Lenovo YT-J706X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.92 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Yoga Tab 11
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; POMDTB006) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/96.0.4664.104 Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 96.0.4664.104
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Polaroid
+    model: POMDTB006
+  os_family: Android
+  browser_family: Chrome
