--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -1001,3 +1001,8 @@
 - regex: 'Focuskeeper/(\d+\.[\.\d]+)?'
   name: 'Focus Keeper'
   version: '$1'
+
+# Quick Search TV (https://play.google.com/store/apps/details?id=com.aospstudio.tvsearch)
+- regex: 'Quick Search TV/(\d+\.[\.\d]+)'
+  name: 'Quick Search TV'
+  version: '$1'
